Fix focus lenkepanel + fix active innoldsfortegnelse Justering padding/spacing + justeringer etter designsystemet: font, line-spacing

--- a/src/main/resources/assets/styles/navno.css
+++ b/src/main/resources/assets/styles/navno.css
@@ -226,8 +226,8 @@ html {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.42857143;
+    font-family: 'Source Sans Pro', Arial, sans-serif;
+    line-height: 1.375rem;
     color: #3e3832;
     background-color: #f1f1f1
 }
@@ -2104,8 +2104,8 @@ button.toggle-search.m-open span {
 }
 
 .maincontent {
+    padding-top: 1rem;
     padding-bottom: 3rem;
-    padding-top: 2rem
 }
 
 @media (max-width: 38.6875em) {
@@ -3583,9 +3583,8 @@ a.knapp {
 }
 
 .breadcrumbs {
-    padding-top: 2em;
+    padding-top: 1rem;
     text-align: left;
-    line-height: 1.2
 }
 
 @media (max-width: 38.74em) {
@@ -4579,7 +4578,7 @@ a.knapp {
 }
 
 .full-article, .article-list, .events-list {
-    padding: 2rem 1.5rem;
+    padding: 1.5rem;
     background: #fff
 }
 
@@ -4712,11 +4711,6 @@ a.knapp {
     left: 0;
     width: 100%;
     height: 100%
-}
-
-.article-body {
-    line-height: 1.25em;
-    overflow: auto;
 }
 
 .article-body > :last-child {
@@ -6585,8 +6579,8 @@ a.normal-text {
 }
 
 div.placeholder {
-    margin-bottom: 3em;
-    margin-top: -23px
+    margin-bottom: 1rem;
+    margin-top: -2rem;
 }
 div.placeholder .top-link-wrapper {
     position: relative;
@@ -7425,6 +7419,7 @@ div.placeholder .top-link-wrapper.sticky-top-link {
 }
 
 .lenkepanel {
+    color: #3E3832;
     background-color: #FFF;
     padding: 1rem;
     border-radius: 4px;
@@ -7433,7 +7428,6 @@ div.placeholder .top-link-wrapper.sticky-top-link {
     justify-content: space-between;
     align-items: center;
     text-decoration: none;
-    color: #3E3832;
 }
 .lenkepanel:hover,
 .lenkepanel--hover {
@@ -7441,6 +7435,8 @@ div.placeholder .top-link-wrapper.sticky-top-link {
 }
 .lenkepanel:focus,
 .lenkepanel--focus {
+    color: #3E3832;
+    background-color: #FFF;
     box-shadow: 0 0 0px 3px #254b6d;
     outline: none;
 }
